# docuscan

./: .gitignore  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/locii/docuscan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/locii/docuscan/: MainActivity.kt  ResultsPreviewActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_results.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/locii/docuscan/: ExampleUnitTest.kt
docuscanlib/: build.gradle
docuscanlib/libcxx_helper/: CMakeLists.txt
docuscanlib/native/src/: DocuScan.cpp  DocuScan.h
docuscanlib/src/androidTest/java/com/locii/docuscanlib/: ExampleInstrumentedTest.kt  InstDocuScanTest.kt
docuscanlib/src/main/: AndroidManifest.xml
docuscanlib/src/main/java/com/locii/docuscanlib/: CameraPreviewActivity.kt  DocuScan.kt  GuideView.kt
docuscanlib/src/main/res/layout/: main_camera.xml
docuscanlib/src/main/res/values/: strings.xml
docuscanlib/src/main/res/xml/: provider_paths.xml
docuscanlib/src/test/java/com/locii/docuscanlib/: DocuScanTest.kt  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/native/jni/abi-x86_64/: OpenCVModules.cmake
opencv/native/jni/include/opencv2/dnn/: dnn.hpp
opencv/sdk/native/jni/: OpenCVConfig.cmake
opencv/sdk/native/jni/abi-arm64-v8a/: OpenCVModules.cmake
opencv/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
opencv/sdk/native/jni/abi-x86/: OpenCVConfig.cmake
opencv/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake
